[build-system]
requires = ["setuptools>67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "mango-mdschema"
description = "ManGO metadata schemas on iRODS"
readme = "README.md"
requires-python = ">=3.8"
version = "1.0.0"
license = {file = "LICENSE"}
authors = [
    { name = "Mariana Montes", email = "mariana.montes@kuleuven.be" },
    { name = "Ronny Moreas", email = "ronny.moreas@kuleuven.be" },
]

[project.urls]
repository = "https://github.com/kuleuven/mango-schema-validator"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
include = ['mango_mdschema', 'mango_mdschema.*']

[tool.pylint."messages control"]
disable = ["too-many-arguments"]
